unpackaged/objects/Field_Sales_Project__c.object
<CustomObject>
  <description>Used by Sales Teams to collect Accounts into different Initiatives.
		These are all managed and created by the Field Sales Teams.</description>
  <fields>
    <fullName>AllowUsersToAddNewLeads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow users to add new leads</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>BrandPicklist__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Category__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>3D Upgrade</fullName>
        </value>
        <value>
          <fullName>ACB with ASA</fullName>
        </value>
        <value>
          <fullName>AH Plus</fullName>
        </value>
        <value>
          <fullName>AH Temp</fullName>
        </value>
        <value>
          <fullName>AlginX</fullName>
        </value>
        <value>
          <fullName>All Ceramics</fullName>
        </value>
        <value>
          <fullName>All Other Endo</fullName>
        </value>
        <value>
          <fullName>All Other - Niti Rotary Files</fullName>
        </value>
        <value>
          <fullName>All Other – Obturation</fullName>
        </value>
        <value>
          <fullName>Anaestadent</fullName>
        </value>
        <value>
          <fullName>Ancillary</fullName>
        </value>
        <value>
          <fullName>ANKYLOS</fullName>
        </value>
        <value>
          <fullName>Apex Locator</fullName>
        </value>
        <value>
          <fullName>Aquasil</fullName>
        </value>
        <value>
          <fullName>Aquasil Ultra Plus</fullName>
        </value>
        <value>
          <fullName>ATIS</fullName>
        </value>
        <value>
          <fullName>ATIS EV</fullName>
        </value>
        <value>
          <fullName>ATIS TX</fullName>
        </value>
        <value>
          <fullName>Atlantis</fullName>
        </value>
        <value>
          <fullName>Atlantis Abutments</fullName>
        </value>
        <value>
          <fullName>Atlantis Suprastructures</fullName>
        </value>
        <value>
          <fullName>Automate</fullName>
        </value>
        <value>
          <fullName>Axeos</fullName>
        </value>
        <value>
          <fullName>Azento Astra Tech</fullName>
        </value>
        <value>
          <fullName>Azento EV</fullName>
        </value>
        <value>
          <fullName>Azento XiVE</fullName>
        </value>
        <value>
          <fullName>Bioceramic</fullName>
        </value>
        <value>
          <fullName>Bluecam</fullName>
        </value>
        <value>
          <fullName>Bonding</fullName>
        </value>
        <value>
          <fullName>Bone</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>3D Upgrade</fullName>
        </value>
        <value>
          <fullName>ACB with ASA</fullName>
        </value>
        <value>
          <fullName>AlginX</fullName>
        </value>
        <value>
          <fullName>All Ceramics</fullName>
        </value>
        <value>
          <fullName>All Other Endo</fullName>
        </value>
        <value>
          <fullName>All Other - Niti Rotary Files</fullName>
        </value>
        <value>
          <fullName>All Other – Obturation</fullName>
        </value>
        <value>
          <fullName>Ancillary</fullName>
        </value>
        <value>
          <fullName>ANKYLOS</fullName>
        </value>
        <value>
          <fullName>Apex Locator</fullName>
        </value>
        <value>
          <fullName>Aquasil</fullName>
        </value>
        <value>
          <fullName>Aquasil Ultra Plus</fullName>
        </value>
        <value>
          <fullName>ATIS</fullName>
        </value>
        <value>
          <fullName>ATIS EV</fullName>
        </value>
        <value>
          <fullName>ATIS TX</fullName>
        </value>
        <value>
          <fullName>Atlantis</fullName>
        </value>
        <value>
          <fullName>Atlantis Abutments</fullName>
        </value>
        <value>
          <fullName>Automate</fullName>
        </value>
        <value>
          <fullName>Azento Astra Tech</fullName>
        </value>
        <value>
          <fullName>Azento EV</fullName>
        </value>
        <value>
          <fullName>Azento XiVE</fullName>
        </value>
        <value>
          <fullName>Bonding</fullName>
        </value>
        <value>
          <fullName>Bone</fullName>
        </value>
        <value>
          <fullName>Brackets</fullName>
        </value>
        <value>
          <fullName>Calibra</fullName>
        </value>
        <value>
          <fullName>Carbide Burs</fullName>
        </value>
        <value>
          <fullName>Cavitron</fullName>
        </value>
        <value>
          <fullName>Celtra</fullName>
        </value>
        <value>
          <fullName>Celtra Duo</fullName>
        </value>
        <value>
          <fullName>Celtra Press</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>UserCountry__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>3D Imaging</fullName>
          <isActive>false</isActive>
          <label>3D Imaging</label>
        </value>
        <value>
          <fullName>ATLANTIS</fullName>
          <isActive>false</isActive>
          <label>ATLANTIS</label>
        </value>
        <value>
          <fullName>CEREC Equipment</fullName>
          <isActive>false</isActive>
          <label>CEREC Equipment</label>
        </value>
        <value>
          <fullName>Class II</fullName>
        </value>
        <value>
          <fullName>Consumables</fullName>
        </value>
        <value>
          <fullName>Digital</fullName>
        </value>
        <value>
          <fullName>Digital Group</fullName>
        </value>
        <value>
          <fullName>Digital Solutions</fullName>
          <isActive>false</isActive>
          <label>Digital Solutions</label>
        </value>
        <value>
          <fullName>Endentulous</fullName>
          <isActive>false</isActive>
          <label>Endentulous</label>
        </value>
        <value>
          <fullName>Endodontics</fullName>
        </value>
        <value>
          <fullName>Equipment</fullName>
        </value>
        <value>
          <fullName>Equipment &amp; Imaging</fullName>
        </value>
        <value>
          <fullName>Extra Oral Imaging</fullName>
          <isActive>false</isActive>
          <label>Extra Oral Imaging</label>
        </value>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>InLab</fullName>
          <isActive>false</isActive>
          <label>InLab</label>
        </value>
        <value>
          <fullName>Intra Oral Imaging</fullName>
          <isActive>false</isActive>
          <label>Intra Oral Imaging</label>
        </value>
        <value>
          <fullName>Midwest Equipment</fullName>
          <isActive>false</isActive>
          <label>Midwest Equipment</label>
        </value>
        <value>
          <fullName>Orthodontics</fullName>
        </value>
        <value>
          <fullName>Preventive</fullName>
          <isActive>false</isActive>
          <label>Preventive</label>
        </value>
        <value>
          <fullName>Procedures</fullName>
          <isActive>false</isActive>
          <label>Procedures</label>
        </value>
        <value>
          <fullName>Prosthetics</fullName>
        </value>
        <value>
          <fullName>Regenerative</fullName>
          <isActive>false</isActive>
          <label>Regenerative</label>
        </value>
        <value>
          <fullName>Restorative</fullName>
          <isActive>false</isActive>
          <label>Restorative</label>
        </value>
        <value>
          <fullName>Root To Crown</fullName>
        </value>
        <value>
          <fullName>Single Unit Crown</fullName>
        </value>
        <value>
          <fullName>Treatment Centers</fullName>
          <isActive>false</isActive>
          <label>Treatment Centers</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Convert_leads_to__c</fullName>
    <defaultValue>'Opportunity'</defaultValue>
    <label>Convert leads to</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Opportunity</fullName>
        </value>
        <value>
          <fullName>Order</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Cross_sell_initiative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cross sell initiative</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Description__c</fullName>
    <inlineHelpText>Description of this Initiative</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>ExpireSalesLeads__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TFUS-000003379</description>
    <inlineHelpText>Check this field to automatically expire all Sales Leads with status 'New' that are associated with this Target List on its End Date.</inlineHelpText>
    <label>Expire Sales Leads</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Initiative_Type__c</fullName>
    <label>List Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Marketing Initiative</fullName>
        </value>
        <value>
          <fullName>Regional Initiative</fullName>
        </value>
        <value>
          <fullName>Sales Team Initiative</fullName>
        </value>
        <value>
          <fullName>Inside Sales Target List</fullName>
        </value>
        <value>
          <fullName>Area Initiative</fullName>
          <isActive>false</isActive>
          <label>Area Initiative</label>
        </value>
        <value>
          <fullName>RCO Initiative</fullName>
          <isActive>false</isActive>
          <label>RCO Initiative</label>
        </value>
        <value>
          <fullName>Static/Ops Maintained List</fullName>
          <isActive>false</isActive>
          <label>Static/Ops Maintained List</label>
        </value>
        <value>
          <fullName>Territory Initiative</fullName>
          <isActive>false</isActive>
          <label>Territory Initiative</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Peer to peer</fullName>
        </value>
        <value>
          <fullName>Email campaign</fullName>
          <label>Email Campaign</label>
        </value>
        <value>
          <fullName>Trade Show</fullName>
          <label>Trade Show/Congress</label>
        </value>
        <value>
          <fullName>Web Form</fullName>
        </value>
        <value>
          <fullName>Contact Center</fullName>
        </value>
        <value>
          <fullName>Customer Contact</fullName>
        </value>
        <value>
          <fullName>Webinar</fullName>
        </value>
        <value>
          <fullName>Ad hoc analysis</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
        <value>
          <fullName>Dealer Sales Rep</fullName>
        </value>
        <value>
          <fullName>Congress</fullName>
          <isActive>false</isActive>
          <label>Congress</label>
        </value>
        <value>
          <fullName>External Training Course</fullName>
          <isActive>false</isActive>
          <label>External Training Course</label>
        </value>
        <value>
          <fullName>Seminar</fullName>
          <isActive>false</isActive>
          <label>Seminar</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Active</fullName>
          <default>true</default>
          <label>Active</label>
        </value>
        <value>
          <fullName>Inactive</fullName>
        </value>
        <value>
          <fullName>In progress</fullName>
          <isActive>false</isActive>
          <label>In progress</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Title__c</fullName>
    <inlineHelpText>This helps the naming of the Initiative</inlineHelpText>
    <label>Title</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>UserCountry__c</fullName>
    <defaultValue>CASE($User.User_Country__c,  
"Australia","Australia",
"Austria","Austria",
"Belarus","Belarus",
"Belgium","Belgium",
"Brazil","Brazil",
"Canada", "Canada",
"China","China",
"Denmark","Denmark",
"Finland","Finland",
"France","France",
"Germany","Germany",
"Holland","Holland",
"Hong Kong","Hong Kong",
"India","India",
"Indonesia","Indonesia",
"Italy","Italy",
"Japan","Japan",
"Kazakhstan","Kazakhstan",
"Luxembourg","Luxembourg",
"Malaysia","Malaysia",
"New Zealand","New Zealand",
"Norway","Norway",
"Philippines","Philippines",
"Portugal","Portugal",
"Poland","Poland",
"Russia","Russia",
"Saudi Arabia","Saudi Arabia",
"Singapore","Singapore",
"Slovakia","Slovakia",
"South Africa","South Africa",
"South Korea","South Korea",
"Spain","Spain",
"Sweden","Sweden",
"Switzerland","Switzerland",
"Taiwan","Taiwan",
"Thailand","Thailand",
"Turkey","Turkey",
"UAE","UAE",
"UK", "UK",
"Ukraine", "Ukraine",
"USA","USA",
"Vietnam","Vietnam",
"HQ: SE")</defaultValue>
    <description>US #2340</description>
    <label>User Country</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Country_Code_full</valueSetName>
    </valueSet>
  </fields>
  <label>Target List</label>
  <listViews>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>Canada_Initiatives</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>NAME</field>
      <operation>startsWith</operation>
      <value>CAN</value>
    </filters>
    <label>Canada Initiatives</label>
    <sharedTo>
      <roleAndSubordinates>CA_Executives</roleAndSubordinates>
      <roleAndSubordinates>Canada_Executives</roleAndSubordinates>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>My_Active_Projects</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
      <field>Status__c</field>
      <operation>equals</operation>
      <value>Active</value>
    </filters>
    <label>My Active Projects</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>My_Inactive_Projects</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
      <field>Status__c</field>
      <operation>equals</operation>
      <value>Inactive</value>
    </filters>
    <label>My Inactive Projects</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>USA_Initiatives</fullName>
    <columns>Status__c</columns>
    <columns>AllowUsersToAddNewLeads__c</columns>
    <columns>Source__c</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Description__c</columns>
    <columns>Category__c</columns>
    <columns>Brand__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>NAME</field>
      <operation>startsWith</operation>
      <value>USA</value>
    </filters>
    <filters>
      <field>Status__c</field>
      <operation>equals</operation>
      <value>Active</value>
    </filters>
    <label>USA Target Lists</label>
    <sharedTo>
      <role>DNA_Shared_Services</role>
      <role>Dentsply_IH_CEO</role>
      <role>NA_CRM_Analyst</role>
      <territoryAndSubordinates>Global_Setup.US_Executives</territoryAndSubordinates>
    </sharedTo>
  </listViews>
  <nameField>
    <label>Target List Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Target Lists</pluralLabel>
  <recordTypes>
    <active>true</active>
    <description>Used to Group the Targets/Leads for the Inside Sales Groups only</description>
    <fullName>Inside_Sales_Targets</fullName>
    <label>Inside Sales Targets</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <description>Used by the Outside Sales Team to Group Leads and Sales Initiative Accounts together</description>
    <fullName>Outside_Sales_Targets</fullName>
    <label>Outside Sales Targets</label>
  </recordTypes>
  <sharingModel>Private</sharingModel>
  <validationRules>
    <fullName>Initiative_Description_Must_Be_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Description__c )  &lt; 5</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Please include a Description  of this Initiative</errorMessage>
  </validationRules>
</CustomObject>